# RP2040_OPC_DHCP_C

./: .gitignore  .gitmodules  CMakeLists.txt  Node-RED-Client.html  NodeREDFlow.json  UAExpertConf.uap  rp2040_hat_freertos_c-patch.cmake  rp2040_hat_freertos_c_sdk_version.cmake  rp2040_hat_lwip_c-patch.cmake
Node-RED-Client_files/: pricing-table.js
examples/: CMakeLists.txt
examples/dhcp_dns/: w5x00_dhcp_dns.c
examples/mqtt_sys/: CMakeLists.txt  w5x00_mqtt_sys.c
examples/opc_dhcp/: CMakeLists.txt  open6241.c  open6241.h  w5x00_opc_dhcp.c
examples/opc_pubsub/: CMakeLists.txt  w5x00_opc_pubsub.c
libraries/: CMakeLists.txt
libraries/picotool/picotool-build/: CMakeCache.txt  Makefile  cmake_install.cmake  data_locs.cpp  install_manifest.txt  picotool
libraries/picotool/picotool-build/bintool/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/boot_bootrom_headers/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/boot_picobin_headers/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/boot_picoboot_headers/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/boot_uf2_headers/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/elf/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/elf2uf2/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/errors/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/lib/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/lib/mbedtls/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/lib/mbedtls/include/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/lib/mbedtls/pkgconfig/: Makefile  cmake_install.cmake  mbedcrypto.pc  mbedtls.pc  mbedx509.pc
libraries/picotool/picotool-build/lib/nlohmann_json/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/lib/whereami/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/pico_binary_info/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/pico_platform/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/pico_usb_reset_interface_headers/: Makefile  cmake_install.cmake
libraries/picotool/picotool-build/picoboot_connection/: Makefile  cmake_install.cmake
libraries/picotool/picotool-subbuild/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
libraries/picotool/picotool-subbuild/picotool-populate-prefix/src/picotool-populate-stamp/: picotool-populate-gitinfo.txt  picotool-populate-update-info.txt
libraries/picotool/picotool-subbuild/picotool-populate-prefix/tmp/: picotool-populate-gitclone.cmake  picotool-populate-gitupdate.cmake  picotool-populate-mkdirs.cmake
port/: CMakeLists.txt
port/FreeRTOS-Kernel/: FreeRTOSConfig.h  cppMemory.cpp  freertos_config.cmake  freertos_unit.cmake  logging_levels.h  logging_stack.h
port/FreeRTOS-Kernel/inc/: FreeRTOSConfig.h
port/FreeRTOS-Kernel/inc/myMalloc/: myMalloc.c  myMalloc.h
port/ioLibrary_Driver/inc/: w5x00_spi.h
port/lwip/: lwipopts.h  w5x00_lwip.c
port/open62541/: open62541.c  open62541.h  open62541config.h
port/open62541/Temperature/: TempVariable.h
port/open62541/include/: opc_add_temperature.h  opc_freertos_status.h  open62541.h
